Some issues with new tokenizer when trying to run get_input_and_target. Still not fixed

--- a/notebooks/quick_test.ipynb
+++ b/notebooks/quick_test.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "505cf85d",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,19 @@
    "execution_count": 18,
    "id": "bbac6d56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'captions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[49]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m words = [w \u001b[38;5;28;01mfor\u001b[39;00m cap \u001b[38;5;129;01min\u001b[39;00m \u001b[43mcaptions\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m w \u001b[38;5;129;01min\u001b[39;00m cap.split()]\n\u001b[32m      2\u001b[39m word_counts = Counter(words)\n",
+      "\u001b[31mNameError\u001b[39m: name 'captions' is not defined"
+     ]
+    }
+   ],
    "source": [
     "words = [w for cap in captions for w in cap.split()]\n",
     "word_counts = Counter(words)"
@@ -312,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "cb6f333c",
    "metadata": {},
    "outputs": [],
@@ -360,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "f2578e94",
    "metadata": {},
    "outputs": [
@@ -370,7 +382,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,13 +399,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab = [[sp.id_to_piece(idx), idx] for idx in range(sp.get_piece_size())]\n",
+    "vocab = [[sp.id_to_piece(idx), idx] for idx in range(sp.GetPieceSize())]\n",
     "vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "d1345828",
    "metadata": {},
    "outputs": [
@@ -403,7 +415,7 @@
        "6000"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "id": "f5678ef2",
    "metadata": {},
    "outputs": [
@@ -427,13 +439,13 @@
     }
    ],
    "source": [
-    "captions_ids = sp.encode(captions[:5], out_type=int)\n",
+    "captions_ids = sp.EncodeAsIds(captions[:5])\n",
     "print(captions_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 39,
    "id": "4732341f",
    "metadata": {},
    "outputs": [
@@ -460,19 +472,19 @@
        " 'A close-up of several silver coins stacked together, showcasing their shiny surfaces and engraved designs.']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "display(captions[:5])\n",
-    "sp.decode(captions_ids)"
+    "sp.DecodeIds(captions_ids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 40,
    "id": "b9fbc859",
    "metadata": {},
    "outputs": [
@@ -485,12 +497,12 @@
     }
    ],
    "source": [
-    "print([sp.id_to_piece(idx) for idx in captions_ids])"
+    "print([sp.IdToPiece(idx) for idx in captions_ids])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "76814924",
    "metadata": {},
    "outputs": [
@@ -504,8 +516,8 @@
     }
    ],
    "source": [
-    "ids = sp.encode(\"a dog running across the field\", out_type=int)\n",
-    "tokens = sp.encode(\"a dog running across the field\", out_type=str)\n",
+    "ids = sp.EncodeAsIds(\"a dog running across the field\")\n",
+    "tokens = sp.EncodeAsPieces(\"a dog running across the field\")\n",
     "\n",
     "print(ids)\n",
     "print(tokens)"
@@ -513,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "id": "45f3e2ae",
    "metadata": {},
    "outputs": [
@@ -527,8 +539,8 @@
     }
    ],
    "source": [
-    "input_ids = [1] + sp.encode(\"a dog running across the field\", out_type=int)\n",
-    "target_ids = sp.encode(\"a dog running across the field\", out_type=int) + [2]\n",
+    "input_ids = [1] + sp.EncodeAsIds(\"a dog running across the field\")\n",
+    "target_ids = sp.EncodeAsIds(\"a dog running across the field\") + [2]\n",
     "\n",
     "max_len = 30\n",
     "input_ids_padded = input_ids + [3]*(max_len - len(input_ids))\n",
@@ -536,6 +548,99 @@
     "\n",
     "print(input_ids_padded)\n",
     "print(target_ids_padded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4c5e82e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.io import imread\n",
+    "from skimage.color import rgb2gray\n",
+    "from skimage.feature import hog\n",
+    "from skimage.transform import resize\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "image_path = '../data/raw/train/train/1548.jpg'\n",
+    "target_size = (256, 256)\n",
+    "\n",
+    "hog_params ={\n",
+    "           'orientations': 9,\n",
+    "           'pixels_per_cell': (8, 8),\n",
+    "           'cells_per_block': (2, 2),\n",
+    "           'block_norm': 'L2-Hys',\n",
+    "           'visualize': False,\n",
+    "           'feature_vector': True\n",
+    "       }\n",
+    "\n",
+    "image = imread(str(image_path))\n",
+    "if image.ndim == 3 and image.shape[-1] == 4:\n",
+    "    # RGBA → RGB → Gray\n",
+    "    image = image[..., :3]\n",
+    "    gray = rgb2gray(image)\n",
+    "elif image.ndim == 3 and image.shape[-1] == 3:\n",
+    "    # RGB → Gray\n",
+    "    gray = rgb2gray(image)\n",
+    "elif image.ndim == 2:  \n",
+    "    # Already grayscale\n",
+    "    gray = image\n",
+    "else:\n",
+    "    raise ValueError(f\"Unexpected image shape {image.shape}\")\n",
+    "    \n",
+    "gray = resize(gray, target_size, anti_aliasing=True)\n",
+    "hog_vec = hog(gray, **hog_params)\n",
+    "hog_vec = hog_vec.astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "62923728",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06658278 0.11205684 0.13339299 ... 0.06305587 0.18832268 0.02542144] (34596,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hog_vec, hog_vec.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "82cf14a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34596\n"
+     ]
+    }
+   ],
+   "source": [
+    "h, w = target_size\n",
+    "orientations = hog_params['orientations']\n",
+    "pixels_per_cell = hog_params['pixels_per_cell']\n",
+    "cells_per_block = hog_params['cells_per_block']\n",
+    "\n",
+    "cells_h = h // pixels_per_cell[0]\n",
+    "cells_w = w // pixels_per_cell[1]\n",
+    "blocks_h = cells_h - cells_per_block[0] + 1\n",
+    "blocks_w = cells_w - cells_per_block[1] + 1\n",
+    "\n",
+    "dimension =  blocks_h * blocks_w * cells_per_block[0] * cells_per_block[1] * orientations\n",
+    "print(dimension)"
    ]
   }
  ],
