--- a/notebooks/quick_test.ipynb
+++ b/notebooks/quick_test.ipynb
@@ -1898,6 +1898,117 @@
     "print(\"❌ Using too high dropout (>0.3) initially\")\n",
     "print(\"❌ Not using residual connections around attention\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9c2b8c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n",
+      "[1, 2, 2]\n",
+      "[1, 2, 2, 3]\n",
+      "[1, 2, 2, 3, 5]\n",
+      "[1, 2, 2, 3, 5, 6]\n",
+      "[1, 2, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums1 = [1,2,3,0,0,0]\n",
+    "nums2 = [2,5,6]\n",
+    "def merge(nums1: list[int], m: int, nums2: list[int], n: int) -> None:\n",
+    "    merged = []\n",
+    "    i, j = 0, 0\n",
+    "\n",
+    "    while i < m and j < n:\n",
+    "        if nums1[i] <= nums2[j] and nums1[i] != 0:\n",
+    "            merged.append(nums1[i])\n",
+    "            print(merged)\n",
+    "            i += 1\n",
+    "        elif nums2[j] != 0:\n",
+    "            merged.append(nums2[j])\n",
+    "            print(merged)\n",
+    "            j += 1\n",
+    "    nums1 = merged\n",
+    "    print(nums1)\n",
+    "    \n",
+    "    \n",
+    "merge(nums1, len(nums1), nums2, len(nums2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "306f09a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    a = [0,1]\n",
+    "    \n",
+    "    for i in range(2, n):\n",
+    "        a.append(a[-1]+a[-2])\n",
+    "    return a\n",
+    "\n",
+    "print(fibonacci(8))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee79962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "df = pd.read_csv('../data/raw/train.csv')\n",
+    "for _, row in df.iterrows():\n",
+    "    data.append({\n",
+    "        'image_path': str('../data/raw/train/train' / row['image_id'] '.jpg'),\n",
+    "        'caption': str(row['caption'])\n",
+    "    })\n",
+    "    \n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d58a2f58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'..\\\\data\\\\raw\\\\train\\\\train\\\\1.jpg'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "image_dir = Path('../data/raw/train/train')\n",
+    "a = {'image_filename': '1', 'image_caption': 'lorem5'}\n",
+    "str(image_dir / (a['image_filename'] + \".jpg\"))"
+   ]
   }
  ],
  "metadata": {
