--- a/notebooks/quick_test.ipynb
+++ b/notebooks/quick_test.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d1277636",
    "metadata": {},
    "outputs": [],
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "766f9787",
    "metadata": {},
    "outputs": [],
@@ -659,10 +659,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "412c2978",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Tokenizer not loaded",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m test_token_ids = \u001b[43mtokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m250\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Dell\\Desktop\\Machine Learning\\ImageCaptionGenerator\\src\\tokenizer\\tokenizer.py:67\u001b[39m, in \u001b[36mBPETokenizer.encode\u001b[39m\u001b[34m(self, text)\u001b[39m\n\u001b[32m     64\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Encode text to token IDs\"\"\"\u001b[39;00m\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.sp \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m67\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mTokenizer not loaded\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     68\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m.sp.EncodeAsIds(text)\n",
+      "\u001b[31mValueError\u001b[39m: Tokenizer not loaded"
+     ]
+    }
+   ],
    "source": [
     "test_token_ids = tokenizer.encode(text[:250])"
    ]
@@ -1975,20 +1988,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
     "data = []\n",
     "df = pd.read_csv('../data/raw/train.csv')\n",
     "for _, row in df.iterrows():\n",
     "    data.append({\n",
-    "        'image_path': str('../data/raw/train/train' / row['image_id'] '.jpg'),\n",
+    "        'image_path': str(Path('../data/raw/train/train') / (str(row['image_id']) + '.jpg')),\n",
     "        'caption': str(row['caption'])\n",
     "    })\n",
     "    \n",
-    "print(data)"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "d58a2f58",
    "metadata": {},
    "outputs": [
@@ -1998,7 +2013,7 @@
        "'..\\\\data\\\\raw\\\\train\\\\train\\\\1.jpg'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
