Finished dataset.py

--- a/notebooks/quick_test.ipynb
+++ b/notebooks/quick_test.ipynb
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3a91f5a9",
    "metadata": {},
    "outputs": [],
@@ -1957,32 +1957,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "306f09a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 1, 2, 3, 5, 8, 13]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def fibonacci(n):\n",
-    "    a = [0,1]\n",
-    "    \n",
-    "    for i in range(2, n):\n",
-    "        a.append(a[-1]+a[-2])\n",
-    "    return a\n",
-    "\n",
-    "print(fibonacci(8))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "5ee79962",
    "metadata": {},
@@ -2003,26 +1977,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d58a2f58",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'..\\\\data\\\\raw\\\\train\\\\train\\\\1.jpg'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "image_dir = Path('../data/raw/train/train')\n",
     "a = {'image_filename': '1', 'image_caption': 'lorem5'}\n",
     "str(image_dir / (a['image_filename'] + \".jpg\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "61bd1646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append(os.path.dirname(os.getcwd()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "66fe791a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.tokenizer.tokenizer import BPETokenizer\n",
+    "tokenizer = BPETokenizer(\"caption_bpe.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4c526cfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.train('../data/raw/train_captions.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "be441fc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.load_tokenizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fa6aeb66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texts = open('../data/raw/train_captions.txt','r', encoding='utf-8').read()\n",
+    "captions = texts.split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd361583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caption_1 = captions[0]\n",
+    "caption_tokenized = tokenizer.encode(caption_1)\n",
+    "caption_tokenized = tokenizer.apply_bos_eos(caption_tokenized)\n",
+    "if len(caption_tokenized) > 250:\n",
+    "    caption_tokenizer = caption_tokenized[:250-1] + [tokenizer.sp.eos_id]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "720b53a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data.hog_extractor import ImageFeatureExtractor\n",
+    "from src.data.dataset import ImageCaptionDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f389daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_extractor = ImageFeatureExtractor()\n",
+    "image_features = feature_extractor.extract_hog_features('../data/raw/train/train/0.jpg')"
    ]
   }
  ],
